--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "astro": "^0.25.3"
+    "astro": "^1.0.0-beta.27"
   },
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build --verbose --experimental-static-build",
+    "build": "astro build --verbose",
     "preview": "astro preview"
   }
 }
